--- a/source/templates/auth.html
+++ b/source/templates/auth.html
@@ -6,16 +6,26 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <style>
+        *, ::after, ::before {
+            box-sizing: border-box;
+        }
+
         body {
+            background-color: #212121;
+            color: #fff;
+            font-family: monospace, serif;
+            letter-spacing: 0.05em;
             display: flex;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
+            justify-content: center;
+            align-items: center;
         }
 
         .login-container {
             display: flex;
-            flex: 1;
+            height: 100%;
+            width: 100%;
         }
 
         .login-form {
@@ -25,63 +35,56 @@
             justify-content: center;
             align-items: center;
             padding: 40px;
-            background: #fff;
+            background: #212121;
             border-radius: 10px;
-            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
             max-width: 400px;
             margin: auto;
         }
 
+        .login-form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
         .form-input {
             width: 100%;
-            margin-bottom: 20px;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .form-submit {
-            width: 100%;
-            padding: 12px;
-            background: #007bff;
+            padding: 14px 16px;
+            border: 0;
+            background: transparent;
             color: #fff;
-            border: none;
-            border-radius: 5px;
+            font-family: monospace, serif;
+            letter-spacing: 0.05em;
+            font-size: 16px;
+            outline: none;
+            margin-bottom: 20px;
+            position: relative;
+            z-index: 2;
+        }
+
+        .form-input:focus {
+            border: 0;
+        }
+
+        .btn {
+            width: 100%;
+            padding: 14px 16px;
+            background: transparent;
+            outline: none;
+            border: 0;
+            color: #fff;
+            letter-spacing: 0.1em;
+            font-weight: bold;
+            font-family: monospace;
             font-size: 16px;
             cursor: pointer;
-            transition: background 0.3s ease;
+            position: relative;
+            z-index: 2;
         }
 
-        .form-submit:hover {
-            background: #0056b3;
-        }
-
-        .forgot-password {
-            text-align: right;
-            margin-top: 10px;
-            font-size: 14px;
-            color: #007bff;
-            cursor: pointer;
-        }
-
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-
-        .sign-up {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 14px;
-        }
-
-        .sign-up a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .sign-up a:hover {
-            text-decoration: underline;
+        .btn:hover {
+            background: rgba(255, 255, 255, 0.2);
         }
 
         .login-image {
@@ -126,9 +129,9 @@
 <body>
     <div class="login-container">
         <div class="login-form">
-            <h2 style="text-align: center; margin-bottom: 20px;">Login</h2>
+            <h2>Login</h2>
             <form action="{{ url_for('oidc_auth.login') }}">
-                <input type="submit" value="Press to login" />
+                <input type="submit" value="Press to login" class="btn"/>
             </form>
         </div>
         <div class="login-image">
