--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -22,6 +22,7 @@
             align-items: center;
             padding: 20px;
             box-sizing: border-box;
+            position: relative;
         }
         .form {
             background-color: #2c2c2c; /* Тёмно-серый фон для формы */
@@ -87,7 +88,24 @@
         .logout a:hover {
             background-color: #c0392b; /* Более тёмный красный цвет кнопки при наведении */
         }
-
+        .top-menu {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            display: flex;
+            gap: 10px;
+        }
+        .top-menu a {
+            text-decoration: none;
+            color: #f0f0f0;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: #555; /* Тёмно-серый цвет для ссылок */
+            text-align: center;
+        }
+        .top-menu a:hover {
+            background-color: #2c2c2c; /* Тёмный цвет ссылки при наведении */
+        }
         /* Медиа-запросы для адаптации под мобильные устройства */
         @media (max-width: 600px) {
             .form {
@@ -111,6 +129,11 @@
         <div class="logout">
             <a href="{{ url_for('oidc_auth.logout') }}">Выход</a>
         </div>
+        <div class="top-menu">
+            <a href="{{ url_for('view_certificates') }}">Просмотр всех сертификатов</a>
+            <a href="{{ url_for('view_expiring_certificates') }}">Просмотр истекающих через 60 дней</a>
+            <a href="{{ url_for('export_certificates') }}">Выгрузить сертификаты в Excel</a>
+        </div>
         <div class="form">
             <h2>Добавление сертификата</h2>
             <form action="{{ url_for('add_cert') }}" method="POST">
@@ -120,11 +143,6 @@
                 <input type="text" name="serial_number" placeholder="Серийный номер" required><br>
                 <input type="submit" value="Добавить">
             </form>
-        </div>
-        <div class="menu">
-            <a href="{{ url_for('view_certificates') }}">Просмотр всех сертификатов</a>
-            <a href="{{ url_for('view_expiring_certificates') }}">Просмотр истекающих через 60 дней</a>
-            <a href="{{ url_for('export_certificates') }}">Выгрузить сертификаты в Excel</a>
         </div>
     </div>
 </body>
