--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -133,6 +133,7 @@
             <a href="{{ url_for('view_certificates') }}">Просмотр всех сертификатов</a>
             <a href="{{ url_for('view_expiring_certificates') }}">Просмотр истекающих через 60 дней</a>
             <a href="{{ url_for('export_certificates') }}">Выгрузить сертификаты в Excel</a>
+            <a href="{{ url_for('view_mchd') }}">Просмотр МЧД</a>
         </div>
         <div class="form">
             <h2>Добавление сертификата</h2>
